--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:context=".MainActivity">
 
-</android.support.constraint.ConstraintLayout>
+        <ImageView
+            android:id="@+id/shojis"
+            android:contentDescription="@string/shojis"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/shojis" />
+
+
+        <ImageView
+            android:id="@+id/fire"
+            android:contentDescription="@string/chef"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:layout_below="@id/shojis"
+            android:src="@drawable/fire" />
+
+        <TextView
+            android:id="@+id/weekly_specials"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:autoLink="web"
+            android:layout_below="@id/fire"
+            android:textAlignment="center"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:textSize="16sp"
+            android:textStyle="italic"
+            android:text="@string/weekly_specials"
+            android:linksClickable="true"
+            android:textColor="@color/white" />
+
+        <TextView
+            android:id="@+id/street_address"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/weekly_specials"
+            android:textAlignment="center"
+            android:paddingBottom="8dp"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:text="@string/street_address"
+            android:textColor="@color/white" />
+
+        <TextView
+            android:id="@+id/city_state"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/street_address"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:paddingBottom="8dp"
+            android:textSize="16sp"
+            android:text="@string/city_state"
+            android:textColor="@color/white" />
+
+        <TextView
+            android:id="@+id/phone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/city_state"
+            android:textAlignment="center"
+            android:paddingBottom="8dp"
+            android:autoLink = "phone"
+            android:textSize="16sp"
+            android:text="@string/phone"
+            android:textColor="@color/white" />
+
+    </RelativeLayout>
+
+</ScrollView>
